# every-day-habit

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-ci.yml  docker-compose-local.yml  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2024_05_23_2036-ea139d5bbd6f_test.py  2024_05_26_2133-77d4c6933045_add_foreign_key_to_habit_table.py  2024_05_27_2009-97447f6bb2ff_add_is_verified_column_to_user_table.py  2024_05_29_1643-9aada5c58542_add_created_at_column_to_habit_table.py  2024_06_02_1511-81c13c2a581b_add_unique_constraint_to_complete_day_.py  2024_06_03_1200-7049674c035d_replace_current_timestamp_column_in_.py  2024_06_08_1722-1b9e673be798_add_cascade_delete_to_habit_table.py  2024_06_11_1504-6f2cd9dc280d_add_note_table.py  2024_06_14_1243-fba85a7c9293_add_cascade_delete_habits_to_user_table.py
backend/app/api/: __init__.py  deps.py  email_sender.py  exceptions.py  security_utils.py  tokens_helper.py
backend/app/certs/: jwt-private.pem  jwt-public.pem
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  note.py  (+3 more)
backend/celery_task/: __init__.py  celery.py
backend/tests/: conftest.py
etc/: service.conf
etc/nginx/: nginx.conf
frontend/: index.html  index.js
static/: index.js  style.css
templates/: base.html  index.html
templates/auth/: forget_password.html  login.html  register.html  verification.html
templates/calendar/: calendar.html
webapps/: __init__.py  utils.py
webapps/auth/: __init__.py  login.py  register.py  reminder.py
webapps/calendar/: calendar.py
(+39 files in other folders)
