[tool.poetry]
name = "dailyhabbits"
version = "0.1.0"
description = ""
authors = ["vyacheslavi <vyach.karepov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standert"], version = "^0.29.0"}
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.30"}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
jinja2 = "^3.1.4"
bcrypt = "^4.1.3"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
